<resources>
    <string name="app_name">ThriftHub</string>
    <string name="create_account">Create a new account</string>
    <string name="quick_easy">It \'s quick and easy.</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="birthday">Birthday</string>
    <string name="gender">Gender</string>
    <string name="email_phone">Mobile number or email</string>
    <string name="new_password">New password</string>
    <string name="sign_up">Sign Up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
